devops/infra/network.tf
provider "aws" {
  region = "us-east-1"
}

# TODO: ACL
# enable dns
# aws organizations
# aws control tower
# tag policy
# aws organizanoal strategy
# sso 
# iam policy

# resource "aws_organizations_organization" "org" {
#   feature_set = "ALL"
# }

# resource "aws_organizations_account" "account" {
#   name  = "prod"
#   email = "barnettlynn@gmail.com"
# }

locals {
  app_name = "boiler"
}


terraform {
  backend "s3" {
    bucket = "tfstate-lynnbarnett"
    key    = "prod"
    region = "us-east-1"
  }
}

resource "aws_iam_role" "app_role" {
  name = "app_role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
 }
 EOF

  tags = {
    Name = "App Role"
    App = "Boiler"
  }
}

resource "aws_iam_policy" "policy" {
  name        = "test-policy"
  description = "A test policy"

  policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "ec2:Describe*"
      ],
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
 }
EOF
}


resource "aws_iam_role_policy_attachment" "test-attach" {
  role       = aws_iam_role.app_role.name
  policy_arn = aws_iam_policy.policy.arn
}

resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "${local.app_name}-VPC"
    App = local.app_name
  }
}

resource "aws_subnet" "public_A" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public_A"
    Type = "public"
    App = local.app_name
  }
}

resource "aws_subnet" "public_B" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch=true
  tags = {
    Name = "public_B"
    Type = "public"
    App = local.app_name
  }
}

resource "aws_subnet" "private_A" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.3.0/24"

  tags = {
    Name = "private_A"
    Type = "private"
    App = local.app_name
  }
}

resource "aws_subnet" "private_B" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.4.0/24"

  tags = {
    Name = "private_B"
    Type = "private"
    App = local.app_name
  }
}

resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Internet Gateway"
    App = local.app_name
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Private_Route_Table_A"
    App = local.app_name
  }
}

resource "aws_route" "internet_gateway_route" {
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_A.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_B.id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat_ip_A" {
    vpc = true
    tags = {
        Name = "NAT_Gateway_A_IP"
        App = local.app_name
    }
}

resource "aws_eip" "nat_ip_B" {
    vpc = true
    tags = {
        Name = "NAT_Gateway_B_IP"
        App = local.app_name
    }
}

resource "aws_nat_gateway" "nat_A" {
  allocation_id = aws_eip.nat_ip_A.id
  subnet_id     = aws_subnet.private_A.id

  tags = {
    Name = "NAT_Gateway_A"
    App = local.app_name
  }
}

resource "aws_nat_gateway" "nat_B" {
  allocation_id = aws_eip.nat_ip_B.id
  subnet_id     = aws_subnet.private_B.id

  tags = {
    Name = "NAT_Gateway_B"
    App = local.app_name
  }
}   

resource "aws_route_table" "private_a" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Private_Route_Table_A"
    App = local.app_name
  }
}

resource "aws_route_table" "private_b" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Private_Route_Table_B"
    App = local.app_name
  }
}

resource "aws_route" "private_route_B" {
  route_table_id            = aws_route_table.private_a.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.nat_A.id
}

resource "aws_route" "private_route_A" {
  route_table_id            = aws_route_table.private_b.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.nat_B.id
}

resource "aws_route_table_association" "private_a" {
  subnet_id     = aws_subnet.private_A.id
  route_table_id = aws_route_table.private_a.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id     = aws_subnet.private_A.id
  route_table_id = aws_route_table.private_a.id
}

resource "aws_eip" "lb_ip" {
    vpc = true
    tags = {
        Name = "LB_IP"
        App = local.app_name
    }
}

resource "aws_lb" "app_lb" {
    name               = "Books-Load-Balancer"
    load_balancer_type = "application"
    security_groups = [aws_security_group.allow_tls.id]

    subnets = [aws_subnet.public_A.id, aws_subnet.public_B.id]

    tags = {
        Name = "Books_load_balancer"
        App = local.app_name
    }
}

resource "aws_security_group" "allow_tls" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

      ingress {
    description = "TLS from VPC"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

      ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = local.app_name
  }
}

resource "aws_launch_template" "base_launch_template" {

  name = "books_app_launch_template"

  block_device_mappings {
    device_name = "/dev/sda1"

    ebs {
      volume_size = 8
    }
  }

  ebs_optimized = true

  image_id = "ami-06b263d6ceff0b3dd"

  key_name = "lynn2"

  monitoring {
    enabled = true
  }

  vpc_security_group_ids = [aws_security_group.allow_tls.id]

  user_data = filebase64("./devops/infra/user-data.sh")
  tags = {
        Name = "Books_load_balancer"
        App = local.app_name
  }
}

resource "aws_autoscaling_group" "bakery_demo_ASG" {
  name                      = "bakery_demo_ASG"
  max_size                  = 5
  min_size                  = 0
  health_check_grace_period = 100
  health_check_type         = "ELB"
  desired_capacity          = 1
  force_delete              = true
  vpc_zone_identifier       = [aws_subnet.public_B.id, aws_subnet.public_A.id]
  target_group_arns = [aws_lb_target_group.bakery_demo_TG.arn]
  mixed_instances_policy {
    launch_template {
      launch_template_specification {
        launch_template_id = aws_launch_template.base_launch_template.id
        version = "$Latest"
      }

      override {
        instance_type     = "t3.small"
        weighted_capacity = "3"
      }

      override {
        instance_type     = "t3a.small"
        weighted_capacity = "2"
      }
    }
  }
}

resource "aws_lb_target_group" "bakery_demo_TG" {
  name     = "bakery-demo-TG"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.app_lb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.bakery_demo_TG.arn
  }
}
